--- a/src/components/SEOcontent.astro
+++ b/src/components/SEOcontent.astro
@@ -5,7 +5,7 @@
         .contentBox {
             display: flex;
             width: 70%;
-            padding: 6%;
+            padding: 5%;
             /* background-color: #F5EEE2; */
         }
     
@@ -21,6 +21,7 @@
             height: 600px;
             border: 2px solid black;
             margin-top: 40px;
+            margin: 5% 3% auto auto;
             text-align: center;
         }
     
@@ -28,6 +29,36 @@
             display: flex;
             flex-direction: row;
         }
+
+
+    @media (max-width: 1330px) {
+
+
+        .all{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .ad {
+            width: 300px;
+            height: 600px;
+            border: 2px solid black;
+           margin: 2% auto 5%;
+
+
+            text-align: center;
+        }
+
+        .contentBox {
+            display: flex;
+            width: 70%;
+            padding: 2%;
+            /* background-color: #F5EEE2; */
+        }
+    
+    }
+
     </style>
 
 <div class="all">
