--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -23,6 +23,12 @@ import DownCategoryBox from "../../components/DownCategoryBox.astro";
     
     }
     
+    /* @media (max-width: 1330px) {
+        .latest-body {
+            margin: 20px auto;
+        }
+    } */
+
 </style>
 <DefaultLayout>
     <CategoryBar />
