--- a/src/components/BlackBar.astro
+++ b/src/components/BlackBar.astro
@@ -26,7 +26,6 @@
         </div>
 
         <div class="box">
-
             <p>
                 Уебсайтовете за ресторанти събират отзиви и препоръки от
                 посетителите, създавайки общност и предоставяйки ценна
@@ -41,22 +40,19 @@
     .BlackBar {
         display: flex;
         flex-direction: row;
-     
         background-color: #000000;
         /* flex-wrap: wrap; */
-    
     }
 
     .box {
         display: flex;
-     margin: 2%;
-     
+        margin: 2%;
+
         background-color: rgb(0, 0, 0);
         color: rgb(255, 255, 255);
         font-family: sans-serif;
         font-size: 15px;
-        text-align:justify;
-        
+        text-align: center;
     }
 
     .content-box {
@@ -70,10 +66,16 @@
         background-color: rgb(0, 0, 0);
     }
 
-    @media only screen and (max-width: 700px) {
+    @media (max-width: 1330px) {
         .box {
-            /* margin: 2%; /* По-малко отстояние между параграфите */
-            /* padding: 15px; По-малко вътрешно запълване */ */
+            display: flex;
+            margin: 2%;
+            background-color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
+            font-family: sans-serif;
+            font-size: 15px;
+            text-align: center;
+            border-right: 1px solid gray ;
         }
     }
 </style>
