--- a/src/components/DownCategoryBox.astro
+++ b/src/components/DownCategoryBox.astro
@@ -2,129 +2,146 @@
 import SingleArticle from "../components/SingleArticle.astro";
 import { articlesList } from "../quearies/articles.js";
 import CategoryArticlesPosts from "../components/DownCategoryBoxPosts.astro";
+import NewsLetter from "./NewsLetter.astro";
 
 const categoryData = Astro.props;
 ---
 
 <style>
     .grid-wrap {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        width: 912px;
-  
-     justify-items: center;
-        gap: 5%;
-        /* margin-left: 9vw; */
-        /* margin-top: 50px; */
-/* margin: 0 auto; */
-    }
-
-    .wrap-category1 {
-        grid-area: 1 / 1 / 4 / 2;
-        width: 451px;
-        /* border-top: 3px solid gray; */
-        padding-top: 10px;
-        color: black;
-        justify-items: center;
-        
-    }
-    .wrap-category2 {
-        grid-area: 1 / 2 / 4 / 3;
-        width: 451px;
-        /* border-top: 3px solid gray; */
-        padding-top: 10px;
-        justify-items: center;
-    }
-
-    .article__box {
-        display: grid;
-        width: 100%;451px
-        height: 912px;
-        margin-bottom: 35px;
-        margin-top: 1px;
-        /* margin-left: 8%; */
-        justify-items: center;
+        display: flex;
+        margin: 20px auto 0 auto;
+        justify-content: center;
         gap: 10px;
+        margin-bottom: 20px;
+        border: 20px solid #f8daa6;
+        border-radius: 10px;
+        background-color: #f8daa6;
+    }
+    .category-name {
+        border-bottom: 3px solid #8f2607;
+    }
+    .wrap-category {
+        padding: 5px;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 470px;
     }
 
     .bigline {
+        width: 100%;
         color: black;
         border-bottom: solid 3px #b1a8a8;
-        padding: 1%;
-      
+        /* padding: 1%; */
         color: #9ca5b4;
         font-weight: bolder;
         margin-bottom: 5%;
     }
 
     .ad {
-        width: 500px;
         height: 50px;
         padding: 10px;
-        border: 2px solid gray;
-        margin-top: 7%;
-        /* margin-left: 350px; */
+        border: 2px solid black;
+        border-radius: 10px;
+        background-color:#f8daa6 ;
         text-align: center;
         justify-content: left;
-        margin: 0 auto;
+        margin: 5% auto;
+
     }
 
     .lines-container {
-        display: flex;
-        justify-content: space-evenly ; Разпределя линиите равномерно
         width: 100%; /* Ширина на контейнера */
         margin-top: 3%; /* Отстояние от горната част */
+        grid-area: 1 / 1 / 2 / 5;
     }
 
     .line {
-        border-bottom: 3px solid gray;
+        border-bottom: 3px solid #8f2607;
         width: 30%; /* Ширина на всяка линия */
         padding: 1%;
         /* margin-right: 5%; */
     }
 
-    /* @media screen and (max-width: 550px) {
-        .article-box {
-            display: grid;
-            grid-template-columns: repeat(
-                1,
-                2fr
-            ); /* Create 3 columns each taking 2/3 of available width */
-            grid-template-rows: repeat(3, auto); /* Create 2 rows */
-            justify-items: center;
-            gap: 10px;
+    @media (max-width: 1000px) {
+        .grid-wrap {
+            display: flex;
+            flex-direction: column;
+
+            align-items: center;
+        }
+    }
+
+    .container {
+        grid-area: 1 / 2 / 2 / 3;
+        margin: 70px, 0px, 40px, 20px;
+    }
+
+    .view-all-category {
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: grey;
+            color: rgb(228, 228, 228);
+            text-align: center;
+            text-decoration: none;
+            font-size: 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
-    } */
-
-  
+        .button:hover {
+            background-color: #8f2607;
+            border-radius: 5px;
+            /* font-size: 1.0em; Промяна на размера на шрифта */
+        }
+    }
 </style>
 
-<div class="bigline"></div>
-
-<div class="ad">
-    <p>Реклама</p>
-</div>
-
-<div class="lines-container">
+<!-- <div class="lines-container">
     <div class="line"></div>
     <div class="line"></div>
-</div>
+</div> -->
 
-
-
-
+<NewsLetter />
+<div class="container">
+    <!-- <div class="bigline"></div> -->
+    <div class="ad">
+        <p>Реклама</p>
+        <!-- grid-area: 1 / 3 / 2 / 4; -->
+    </div>
     <div class="grid-wrap">
-      
-        <div class="article__box wrap-category1">
-            <CategoryArticlesPosts articlesCount={3} categoryId="1" />
-           
+        <div>
+            <div class="category-name">
+                <p>Ресторанти</p>
+            </div>
+            <div class="wrap-category">
+                <CategoryArticlesPosts articlesCount={3} categoryId="1" />
+            </div>
+
+            <div class="view-all-category">
+                <a
+                    href="http://localhost:4322/categories/restoranti"
+                    class="button">Виж всички</a
+                >
+            </div>
         </div>
-        <div class="article__box wrap-category2">
-            <CategoryArticlesPosts articlesCount={3} categoryId="2" />
+        <div>
+            <div class="category-name">
+                <p>Кухня/Рецепти</p>
+            </div>
+            <div class="wrap-category">
+                <CategoryArticlesPosts articlesCount={3} categoryId="2" />
+            </div>
+            <div class="view-all-category">
+                <a
+                    href="http://localhost:4322/categories/kuhnya-recepti"
+                    class="button">Виж всички</a
+                >
+            </div>
         </div>
     </div>
-
+</div>
