--- a/src/components/SingleArticleHiglights.astro
+++ b/src/components/SingleArticleHiglights.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-const { url, image, name } = Astro.props;
+const { url, image, name, category } = Astro.props;
 ---
 
 <style>
@@ -16,16 +16,25 @@ const { url, image, name } = Astro.props;
         left: 1;
         color: white;
         margin-left: 4%;
+
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        max-width: 100%;
+        overflow: hidden;
+  
+    
     }
+ 
 
     .image-wrapper {
-        max-width: 450px;
-        height: auto;
+        max-width: 100%;
+        height: 250px;
         border-radius: 7%;
         overflow: hidden;
     }
 
-    img {
+    img{
         width: 100%;
         height: auto;
         object-fit: cover;
@@ -33,8 +42,8 @@ const { url, image, name } = Astro.props;
     .blur {
         z-index: 1;
         position: absolute;
-        width: 450px;
-        height: 98%;
+        width: 100%;
+        height: 100%;
         background: linear-gradient(
             0deg,
             rgba(0, 0, 0, 0.6519782913165266) 22%,
@@ -48,6 +57,15 @@ const { url, image, name } = Astro.props;
 <a href={`/blog/${url}`}>
     <div style="position: relative;">
         <h2>{name}</h2>
+        <!-- <h2>
+            {
+                category.map((item) => {
+                    console.log(item)
+                    return <p>{item.attributes.name}</p>;
+                    return 1
+                })
+            }
+        </h2> -->
         <div class="blur"></div>
         <div class="image-wrapper">
             <Image
