--- a/src/components/SingleArticleLastest.astro
+++ b/src/components/SingleArticleLastest.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-const { url, image, name } = Astro.props;
+const { url, image, name, category } = Astro.props;
 ---
 
 <style>
@@ -13,19 +13,32 @@ const { url, image, name } = Astro.props;
         z-index: 4;
         position: absolute;
         bottom: 0;
-        left: 1;
+        
         color: white;
-        margin-left: 4%;
+     margin: 0% auto 5% 5%;
+     
+    }
+
+    p {
+        display: flex;
+        flex-direction: row;
+        z-index: 4;
+        position: absolute;
+        bottom: 0;
+        color: white;
+        margin: 5% auto 15% 5%;
+         
     }
 
     .image-wrapper {
-        max-width: 450px;
+        width: 100%;
         height: auto;
-        border-radius: 7%;
+        border-radius: 10%;
         overflow: hidden;
     }
 
     img {
+        border-radius: 7%;
         width: 100%;
         height: auto;
         object-fit: cover;
@@ -33,8 +46,8 @@ const { url, image, name } = Astro.props;
     .blur {
         z-index: 1;
         position: absolute;
-        width: 450px;
-        height: 98%;
+        width: 100%;
+        height: 100%;
         background: linear-gradient(
             0deg,
             rgba(0, 0, 0, 0.6519782913165266) 22%,
@@ -43,11 +56,15 @@ const { url, image, name } = Astro.props;
         background-size: cover;
         border-radius: 20px;
     }
+
+    .name-category {
+        display: flex;
+        flex-direction: column;
+    }
 </style>
 
 <a href={`/blog/${url}`}>
     <div style="position: relative;">
-        <h2>{name}</h2>
         <div class="blur"></div>
         <div class="image-wrapper">
             <Image
@@ -57,5 +74,17 @@ const { url, image, name } = Astro.props;
                 height="200"
             />
         </div>
+    </div>
+    <div class="name-category">
+        <h2>{name}</h2>
+
+            <!-- {
+                category.map((item) => {
+                    console.log(item);
+                    return <p>{item.attributes.name}</p>;
+                    // return 1;
+                })
+            } -->
+
     </div>
 </a>
