--- a/src/components/SingleArticleSlider.astro
+++ b/src/components/SingleArticleSlider.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-const { url, image, name } = Astro.props;
+const { url, image, name, Category } = Astro.props;
 ---
 
 <style>
@@ -17,15 +17,16 @@ const { url, image, name } = Astro.props;
         color: white;
         margin-left: 4%;
     }
+ 
 
     .image-wrapper {
-        max-width: 450px;
-        height: auto;
+        width: 100%;
+        height: 100%;
         border-radius: 7%;
         overflow: hidden;
     }
 
-    img {
+    img{
         width: 100%;
         height: auto;
         object-fit: cover;
@@ -33,8 +34,8 @@ const { url, image, name } = Astro.props;
     .blur {
         z-index: 1;
         position: absolute;
-        width: 450px;
-        height: 98%;
+        width: 100%;
+        height: 100%;
         background: linear-gradient(
             0deg,
             rgba(0, 0, 0, 0.6519782913165266) 22%,
@@ -48,6 +49,7 @@ const { url, image, name } = Astro.props;
 <a href={`/blog/${url}`}>
     <div style="position: relative;">
         <h2>{name}</h2>
+        <h2>{Category}</h2>
         <div class="blur"></div>
         <div class="image-wrapper">
             <Image
