--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -13,10 +13,12 @@ import CategoryBar from "../components/CategoryBar.astro";
 import '../styles/global.css';
 ---
 
+
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
 
@@ -28,8 +30,18 @@ import '../styles/global.css';
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Header />
-    <CategoryBar />
+    <style>
+      .stiky{
+        position:sticky;
+    z-index: 100;
+    top: 0%;
+      }
+    </style>
+    <div class="stiky">
+
+      <Header />
+      <CategoryBar />
+    </div>
     <slot />
 
     <Footer />
