--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,32 @@
 html {
-    background-color:#F5F5F5;
+    /* background-color:#F5F5F5; */
     /* background-color: #fae5c4; */
-   
+   background-color:#F5EEE2
+  
   }
+
+img{
+  width: 100%;
+  height: auto;
+}
+  .layout-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 20%
+
+  }
+
+  @media (max-width: 1440px) {
+    .layout-container{
+        padding: 0 10%
+      }
+}
+
+@media (max-width: 800px) {
+    .layout-container{
+        padding: 0 5%
+      }
+}
